--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev_server": "nodemon server.js",
+    "dev_index": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
