--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev_server": "nodemon server.js",
-    "dev_index": "nodemon index.js"
+    "dev_chatapp": "nodemon chatapp.js"
   },
   "dependencies": {
     "express": "^4.18.2",
